[gd_scene load_steps=44 format=2]

[ext_resource path="res://flicker.gd" type="Script" id=1]
[ext_resource path="res://radial.tres" type="Shader" id=2]
[ext_resource path="res://scroll.gdshader" type="Shader" id=3]
[ext_resource path="res://RushRing.gd" type="Script" id=4]
[ext_resource path="res://images/rush_2.png" type="Texture" id=5]
[ext_resource path="res://images/rush_0.png" type="Texture" id=6]
[ext_resource path="res://images/rush_6.png" type="Texture" id=7]
[ext_resource path="res://images/rush_3.png" type="Texture" id=8]
[ext_resource path="res://images/rush_1.png" type="Texture" id=9]
[ext_resource path="res://images/rush_4.png" type="Texture" id=10]
[ext_resource path="res://images/rush_5.png" type="Texture" id=11]
[ext_resource path="res://images/rush_10.png" type="Texture" id=12]
[ext_resource path="res://images/rush_9.png" type="Texture" id=13]
[ext_resource path="res://images/rush_8.png" type="Texture" id=14]
[ext_resource path="res://images/rush_7.png" type="Texture" id=15]
[ext_resource path="res://ButtonPrompt.stylebox" type="StyleBox" id=16]
[ext_resource path="res://ThemeEpisode.tres" type="Theme" id=17]
[ext_resource path="res://fonts/small_normal.tres" type="DynamicFont" id=18]
[ext_resource path="res://green.stylebox" type="StyleBox" id=19]
[ext_resource path="res://BackButton.tscn" type="PackedScene" id=20]
[ext_resource path="res://ThemeSettingOption.tres" type="Theme" id=21]
[ext_resource path="res://Settings.gd" type="Script" id=22]
[ext_resource path="res://BackButton.gd" type="Script" id=23]
[ext_resource path="res://SettingsRange.tscn" type="PackedScene" id=24]
[ext_resource path="res://RingsContainer.gd" type="Script" id=25]
[ext_resource path="res://ButtonPromptHover.stylebox" type="StyleBox" id=26]
[ext_resource path="res://ScreenStretch.tscn" type="PackedScene" id=27]
[ext_resource path="res://fonts/title_normal.tres" type="DynamicFont" id=28]
[ext_resource path="res://SettingsBool.tscn" type="PackedScene" id=29]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 3 )
shader_param/offset = 0.0

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 600
border_width_top = 600
border_width_right = 600
border_width_bottom = 600
border_color = Color( 0.278431, 0.278431, 0.278431, 1 )
border_blend = true
corner_radius_top_left = 800
corner_radius_top_right = 800
corner_radius_bottom_right = 800
corner_radius_bottom_left = 800
corner_detail = 16

[sub_resource type="ShaderMaterial" id=22]
shader = ExtResource( 2 )
shader_param/scale = 1.0
shader_param/blend = 1.0
shader_param/canvas_size = Vector2( 1312, 752 )

[sub_resource type="ViewportTexture" id=14]
flags = 4
viewport_path = NodePath("ViewportContainer/RingsVp")

[node name="Settings" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -504, -80 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 22 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_left = -0.3
anchor_top = -0.789
anchor_right = 1.3
anchor_bottom = -0.078
margin_top = 0.0800171
margin_right = -0.00012207
margin_bottom = 0.16
mouse_filter = 2

[node name="RingsVp" type="Viewport" parent="ViewportContainer"]
size = Vector2( 2048, 512 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Container" type="Control" parent="ViewportContainer/RingsVp"]
margin_right = 2048.0
margin_bottom = 512.0
script = ExtResource( 25 )

[node name="Rush0" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 1 )
anchor_right = 1.0
margin_top = 460.0
margin_bottom = 500.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 6.5

[node name="Rush1" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 2 )
anchor_right = 1.0
margin_top = 400.0
margin_bottom = 452.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 9.0

[node name="Rush2" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 3 )
anchor_right = 1.0
margin_top = 310.0
margin_bottom = 390.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 32.0

[node name="Rush3" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 4 )
anchor_right = 1.0
margin_top = 339.0
margin_bottom = 350.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 20.0

[node name="Rush4" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 5 )
anchor_right = 1.0
margin_top = 326.0
margin_bottom = 328.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 12.0

[node name="Rush5" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 6 )
anchor_right = 1.0
margin_top = 255.0
margin_bottom = 289.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 16.0

[node name="Rush6" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 7 )
anchor_right = 1.0
margin_top = 138.0
margin_bottom = 228.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 36.0

[node name="Rush7" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 8 )
anchor_right = 1.0
margin_top = 123.0
margin_bottom = 131.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 8.0

[node name="Rush8" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 9 )
anchor_right = 1.0
margin_top = 85.0
margin_bottom = 117.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 14 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 64.0

[node name="Rush9" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 10 )
anchor_right = 1.0
margin_top = 4.0
margin_bottom = 66.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 48.0

[node name="Rush10" type="TextureRect" parent="ViewportContainer/RingsVp/Container"]
material = SubResource( 11 )
anchor_right = 1.0
margin_top = 170.0
margin_bottom = 173.0
rect_min_size = Vector2( 1024, 0 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 1
script = ExtResource( 4 )
period = 64.0

[node name="ScreenStretch" parent="." instance=ExtResource( 27 )]

[node name="Panel" type="Panel" parent="ScreenStretch"]
modulate = Color( 0.0627451, 0.168627, 0.309804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -440.0
margin_right = 160.0
margin_bottom = 440.0
custom_styles/panel = SubResource( 12 )
script = ExtResource( 1 )

[node name="Rings" type="TextureRect" parent="ScreenStretch"]
material = SubResource( 22 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 14 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="ScreenStretch"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -296.0
margin_right = 576.0
margin_bottom = 296.0
theme = ExtResource( 17 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenStretch/Scroll"]
margin_right = 736.0
margin_bottom = 226.0
size_flags_horizontal = 3
alignment = 2

[node name="TopSpacer" type="Control" parent="ScreenStretch/Scroll/VBoxContainer"]
margin_right = 736.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )

[node name="Range" parent="ScreenStretch/Scroll/VBoxContainer" instance=ExtResource( 24 )]

[node name="Bool" parent="ScreenStretch/Scroll/VBoxContainer" instance=ExtResource( 29 )]

[node name="BottomSpacer" type="Control" parent="ScreenStretch/Scroll/VBoxContainer"]
margin_top = 210.0
margin_right = 736.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 16 )

[node name="Details" type="Panel" parent="ScreenStretch"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -168.0
margin_right = 448.0
margin_bottom = 168.0
theme = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="ScreenStretch/Details"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Name" type="Label" parent="ScreenStretch/Details/V"]
margin_right = 368.0
margin_bottom = 44.0
autowrap = true

[node name="Desc" type="RichTextLabel" parent="ScreenStretch/Details/V"]
margin_top = 48.0
margin_right = 368.0
margin_bottom = 76.0
theme = ExtResource( 17 )
bbcode_enabled = true
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="ScreenStretch" instance=ExtResource( 20 )]
margin_top = 72.0
margin_bottom = 128.0

[node name="SaveButton" type="Panel" parent="ScreenStretch"]
margin_left = -16.0
margin_top = 8.0
margin_right = 328.0
margin_bottom = 64.0
custom_styles/panel = ExtResource( 19 )
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScreenStretch/SaveButton"]
margin_left = 82.0
margin_top = 16.0
margin_right = 216.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 18 )
text = "Сохранить"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Button" parent="ScreenStretch/SaveButton"]
margin_left = 226.0
margin_top = 8.0
margin_right = 336.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 18 )
custom_styles/hover = ExtResource( 26 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/focus = ExtResource( 16 )
custom_styles/disabled = ExtResource( 16 )
custom_styles/normal = ExtResource( 16 )
text = "Пробел/㍙"

[node name="ButtonAsset" type="Button" parent="ScreenStretch"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -126.0
margin_right = 215.0
margin_bottom = -75.0
grow_vertical = 0
theme = ExtResource( 21 )
text = "㍞ Clear asset cache"
align = 0

[node name="Button" type="Button" parent="ScreenStretch"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -67.0
margin_right = 214.0
margin_bottom = -16.0
grow_vertical = 0
theme = ExtResource( 21 )
text = "㍛ Clear question cache"
align = 0

[node name="AssetDeleted" type="ColorRect" parent="ScreenStretch"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 98, 400 )
color = Color( 0.102386, 0.214844, 0.170037, 0.752941 )

[node name="Label" type="Label" parent="ScreenStretch/AssetDeleted"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 28 )
text = "Asset file cache has been deleted.
Please reload the page to download it again!"
align = 1
valign = 1

[connection signal="back_pressed" from="ScreenStretch/BackButton" to="." method="_on_BackButton_back_pressed"]
[connection signal="back_pressed" from="ScreenStretch/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ScreenStretch/SaveButton/Panel" to="ScreenStretch/SaveButton" method="_on_Panel_pressed"]
[connection signal="pressed" from="ScreenStretch/ButtonAsset" to="." method="clear_asset_cache"]
[connection signal="pressed" from="ScreenStretch/Button" to="." method="clear_question_cache"]
